--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -247,6 +247,7 @@ NavTreeNode.sources=\ sources
 NavTreeNode.swing.worker.fault.during.get.of=Swing worker fault during get of 
 NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
+Navigator.bibliographyTab.tab.mnemonic_2=Y
 Navigator.bibliographyTab.tab.title=Bibliography
 Navigator.button.Back.toolTipText=Back (Alt-Left)
 Navigator.button.Forward.toolTipText=Forward (Alt-Right)
@@ -279,14 +280,14 @@ Navigator.buttonDelete.toolTipText=Delete tool configuration
 Navigator.buttonDownSource.toolTipText=Move source down
 Navigator.buttonHintTracking.mnemonic=N
 Navigator.buttonNew.mnemonic=N
-Navigator.buttonNew.text=New ...
+Navigator.buttonNew.text=New
 Navigator.buttonNew.toolTipText=Add new tool configuration
 Navigator.buttonLibraryGenerateKey.toolTipText=Generate UUID
-Navigator.buttonLibrarySelectTempLocation.toolTipText=Select temporary files location
+Libraries.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
 Navigator.buttonLibrariesAddIgnore.text=Add
 Navigator.buttonLibrariesAddIgnore.toolTipText=Add an ignore pattern
-Navigator.buttonLibrariesRemoveIgnore.mnemonic=E
+Navigator.buttonLibrariesRemoveIgnore.mnemonic_2=M
 Navigator.buttonLibrariesRemoveIgnore.text=Remove
 Navigator.buttonLibrariesRemoveIgnore.toolTipText=Delete one or more ignore patterns
 Navigator.buttonRemoveLibrary.mnemonic=M
@@ -299,6 +300,7 @@ Navigator.buttonRemoveLocation.mnemonic=M
 Navigator.buttonRemoveLocation.text=Remove
 Navigator.buttonRemoveLocation.toolTipText=Delete one or more locations
 Navigator.buttonUpSource.toolTipText=Move source up
+Navigator.cancelButton.mnemonic_2=U
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -307,11 +309,10 @@ Navigator.dryrun.tooltip=Run but do not perform any actions
 Navigator.dryrun=Dry-run
 Navigator.error.launching.browser=Error launching browser
 Navigator.error.writing.hint=Error writing Hint: 
+Navigator.generalTab.tab.mnemonic=G
 Navigator.generalTab.tab.title=General
 Navigator.initialized=Initialized Navigator
-Libraries.labelBiblioLibraries.text=Libraries
 Navigator.labelIgnores.text=Ignore patterns\:
-Libraries.labelLibraries.text=Libraries
 Navigator.labelTerminalAllosed.text=Terminal allowed\:
 Navigator.labelTempLocation.text=Temporary files location\:
 Navigator.labelTempDated.text=Temporary files dated\:
@@ -322,10 +323,11 @@ Navigator.labelListen.text=Listen\:
 Navigator.labelHost.text=Host\:
 Navigator.labelKey.text=Key\:
 Navigator.labelLibrariesGettingStarted.text=Click the New button to define parameters for a library
-Navigator.labelLibrariesHelp.toolTipText=Libraries help
+Navigator.labelLibrariesHelp.toolTipText=Libraries Help
 Navigator.labelSources.text=Sources
 Navigator.libraries=\ libraries
-Navigator.listOperationIncludeExclude.toolTipText=Included and excluded libraries
+Libraries.listIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions
+Navigator.locationsTab.tab.mnemonic=L
 Navigator.locationsTab.tab.title=Locations
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
@@ -530,6 +532,7 @@ Navigator.popupMenuItemRefresh.mnemonic=F
 Navigator.popupMenuItemRefresh.text=Refresh
 Navigator.popupMenuItemTop.mnemonic=T
 Navigator.popupMenuItemTop.text=Top
+Navigator.saveButton.mnemonic=O
 Navigator.scanning.publisher=Scanning publisher
 Navigator.scanning.subscriber=Scanning subscriber
 Navigator.scrollPane.Log.tab.title=Log
@@ -542,8 +545,10 @@ Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
+Libraries.textFieldTempLocation.toolTipText=Directory for temporary file
+Libraries.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
 Navigator.workstation=Workstation
-OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want delete {0} entries?
+OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want to delete {0} entries?
 OperationsUI.buttonCopyOperation.mnemonic=C
 OperationsUI.buttonDeleteOperation.mnemonic=D
 OperationsUI.buttonGenerateOperation.mnemonic=G
@@ -848,6 +853,7 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
+Z.are.you.sure=Are you sure?
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes.toolTipText=Discard all changes
@@ -907,11 +913,29 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Libraries.labelLibraries.text=Libraries
 Libraries.libraries.changes.cancelled=Libraries changes cancelled
-Libraries.libraries.changes.saved=Libraries changes saved
+Libraries.libraries.changes.saved=Libraries changes saved and reloaded
 Libraries.library=Library
 Libraries.hint.server=Hint Server
 Libraries.targets=Targets
 Libraries.mode.select.type=Select type:
 Libraries.generate.new.uuid.for=Generate new UUID for: 
 Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing UUID.</body></html>
+Libraries.save.toolTip.text=Save all changes & reload
+Libraries.cancel.toolTip.text=Cancel all changes & reload
+Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
+Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
+Libraries.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
+Libraries.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
+Libraries.temp.location=Temporary Files Directory
+Libraries.labelBiblioLibraries.text=Libraries
+Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
+Libraries.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
+Libraries.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
+Libraries.textFieldListen.toolTipText=For remote Navigators and Publishers. The\n"inside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  plex.fuzzywuzzybear.com\:50271
+Libraries.undo=Undo
+Libraries.add.ignore.1=Enter a regular expression pattern.
+Libraries.add.ignore.2=Note: Embedded regex characters must
+Libraries.add.ignore.3=be escaped with a backslash \\.
+Libraries.add.ignore.4=See Libraries Help for details.
