--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -124,10 +124,10 @@ JobsUI.buttonNew.toolTipText=Add new job configuration
 JobsUI.buttonOriginDown.toolTipText=Move origin down
 JobsUI.buttonOriginUp.toolTipText=Move origin up
 JobsUI.buttonRemoveOrigin.mnemonic_2=M
-JobsUI.buttonRemoveOrigin.text=Remove
+JobsUI.buttonRemoveOrigin.text=Remove ...
 JobsUI.buttonRemoveOrigin.toolTipText=Delete one or more origins
 JobsUI.buttonRemoveTask.mnemonic=E
-JobsUI.buttonRemoveTask.text=Remove
+JobsUI.buttonRemoveTask.text=Remove ...
 JobsUI.buttonRemoveTask.toolTipText=Delete one or more tasks
 JobsUI.buttonRun.mnemonic=R
 JobsUI.buttonRun.text=Run ...
@@ -169,7 +169,7 @@ JunkRemover.button.New.mnemonic=N
 JunkRemover.button.New.text=New
 JunkRemover.button.New.toolTipText=Add new tool configuration
 JunkRemover.button.RemoveRow.mnemonic=E
-JunkRemover.button.RemoveRow.text=Remove
+JunkRemover.button.RemoveRow.text=Remove ...
 JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
 JunkRemover.button.Run.mnemonic=R
 JunkRemover.button.Run.text=Run ...
@@ -186,6 +186,57 @@ JunkRemover.stop.running.junk.remover=Stop currently running Junk Remover?
 JunkRemover.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
 JunkRemover.title=Junk Remover
 JunkRemover.uses.only.one.repository={0} uses only one repository
+Libraries.add.ignore.1=Enter a regular expression pattern.
+Libraries.add.ignore.2=Note: Embedded regex characters must
+Libraries.add.ignore.3=be escaped with a backslash \\.
+Libraries.add.ignore.4=See Libraries Help for details.
+Libraries.add.multi.library.name=Add {0}{1}<library name>
+Libraries.add.new.source.to.libraries=Add new Source to libraries:
+Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
+Libraries.buttonLibrariesRefesh.text=Refesh
+Libraries.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
+Libraries.cancel.toolTip.text=Cancel all changes & reload
+Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
+Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
+Libraries.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
+Libraries.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
+Libraries.generate.new.uuid.for=Generate new UUID for: 
+Libraries.hint.server=Hint Server
+Libraries.labelBiblioLibraries.text=Libraries
+Libraries.libraries.changes.cancelled=Libraries changes cancelled
+Libraries.libraries.changes.saved=Libraries changes saved and reloaded
+Libraries.library=Library
+Libraries.listIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions.\n\nSee Libraries Help for details.
+Libraries.location=Location
+Libraries.minimum.free.space.for.location=Minimum free space for Location:
+Libraries.minimum.free.space=Minimum Free Space
+Libraries.mode.select.type=Select type:
+Libraries.please.select.a.single.source.to.move=Please select a single Source to move
+Libraries.remove.library.from=Remove library {0} from {1}?
+Libraries.remove.locations.from=Remove {0} locations from {1}?
+Libraries.remove.sources.from.library=Remove {0} sources from {1} library {2}?
+Libraries.save.toolTip.text=Save all changes & reload
+Libraries.select.base.path.of.new.location=Select base path of new Location:
+Libraries.select.location=Select location
+Libraries.select.new.location=Select new Location
+Libraries.select.new.source.base.path=Select new source base path
+Libraries.select.new.source.path=Select new source path
+Libraries.select.source.base.path=Select source base path
+Libraries.sources.multiple=<html><body><b>Add Source to Multiple Libraries</b><br/><br/><p><i>Note:</i> This is different than Add.<br/><p>Uses the <b>base path + library name</b> of selected libraries for new sources.<br/><br/></p><p>Select base path of new Source:</html></body>
+Libraries.targets=Targets
+Libraries.temp.location=Temporary Files Directory
+Libraries.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
+Libraries.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
+Libraries.textFieldListen.toolTipText=For remote Navigators and Publishers. The\n"inside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  plex.fuzzywuzzybear.com\:50271
+Libraries.textFieldTempLocation.toolTipText=Directory for temporary file
+Libraries.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
+Libraries.that.library.already.exists=That library already exists
+Libraries.that.location.is.already.defined=That Location is already defined
+Libraries.that.source.is.already.defined=That Source is already defined
+Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing UUID.</body></html>
+Libraries.to.multi.libraries=To {0} libraries?
+Libraries.toggle.all=\ Toggle all
+Libraries.undo=Undo
 Main.disconnecting.and.shutting.down=Disconnecting and shutting down
 MainFrame.cancelling.transfers.as.requested=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
@@ -261,16 +312,18 @@ Navigator.button.Hints.disabled.tooltip=Hints disabled
 Navigator.button.Hints.enabled.tooltip=Hints enabled
 Navigator.button.HintsKeys.text=\ Hints
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
-Libraries.buttonLibrariesRefesh.text=Refesh
 Navigator.buttonAddLibrary.mnemonic=D
 Navigator.buttonAddLibrary.text=Add
 Navigator.buttonAddLibrary.toolTipText=Add a library
-Navigator.buttonAddSource.mnemonic=D
-Navigator.buttonAddSource.text=Add
-Navigator.buttonAddSource.toolTipText=Add a source to library
 Navigator.buttonAddLocation.mnemonic=D
-Navigator.buttonAddLocation.text=Add
+Navigator.buttonAddLocation.text=Add ...
 Navigator.buttonAddLocation.toolTipText=Add a location
+Navigator.buttonAddMultiSource.mnemonic=D
+Navigator.buttonAddMultiSource.text=Multiple ...
+Navigator.buttonAddMultiSource.toolTipText=Add a source base path to multiple libraries
+Navigator.buttonAddSource.mnemonic=D
+Navigator.buttonAddSource.text=Add ...
+Navigator.buttonAddSource.toolTipText=Add a source to library
 Navigator.buttonCopy.mnemonic=C
 Navigator.buttonCopy.text=Copy
 Navigator.buttonCopy.toolTipText=Copy an existing tool configuration
@@ -279,26 +332,25 @@ Navigator.buttonDelete.text=Delete ...
 Navigator.buttonDelete.toolTipText=Delete tool configuration
 Navigator.buttonDownSource.toolTipText=Move source down
 Navigator.buttonHintTracking.mnemonic=N
-Navigator.buttonNew.mnemonic=N
-Navigator.buttonNew.text=New
-Navigator.buttonNew.toolTipText=Add new tool configuration
-Navigator.buttonLibraryGenerateKey.toolTipText=Generate UUID
-Libraries.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
 Navigator.buttonLibrariesAddIgnore.text=Add
 Navigator.buttonLibrariesAddIgnore.toolTipText=Add an ignore pattern
 Navigator.buttonLibrariesRemoveIgnore.mnemonic_2=M
-Navigator.buttonLibrariesRemoveIgnore.text=Remove
+Navigator.buttonLibrariesRemoveIgnore.text=Remove ...
 Navigator.buttonLibrariesRemoveIgnore.toolTipText=Delete one or more ignore patterns
+Navigator.buttonLibraryGenerateKey.toolTipText=Generate UUID
+Navigator.buttonNew.mnemonic=N
+Navigator.buttonNew.text=New
+Navigator.buttonNew.toolTipText=Add new tool configuration
 Navigator.buttonRemoveLibrary.mnemonic=M
-Navigator.buttonRemoveLibrary.text=Remove
+Navigator.buttonRemoveLibrary.text=Remove ...
 Navigator.buttonRemoveLibrary.toolTipText=Delete one or more libraries
-Navigator.buttonRemoveSource.mnemonic=M
-Navigator.buttonRemoveSource.text=Remove
-Navigator.buttonRemoveSource.toolTipText=Delete one or more sources
 Navigator.buttonRemoveLocation.mnemonic=M
-Navigator.buttonRemoveLocation.text=Remove
+Navigator.buttonRemoveLocation.text=Remove ...
 Navigator.buttonRemoveLocation.toolTipText=Delete one or more locations
+Navigator.buttonRemoveSource.mnemonic=M
+Navigator.buttonRemoveSource.text=Remove ...
+Navigator.buttonRemoveSource.toolTipText=Delete one or more sources
 Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
 Navigator.controls.help.title=Navigator Controls
@@ -312,21 +364,20 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.generalTab.tab.mnemonic=G
 Navigator.generalTab.tab.title=General
 Navigator.initialized=Initialized Navigator
-Navigator.labelIgnores.text=Ignore patterns\:
-Navigator.labelTerminalAllosed.text=Terminal allowed\:
-Navigator.labelTempLocation.text=Temporary files location\:
-Navigator.labelTempDated.text=Temporary files dated\:
 Navigator.labelCase.text=Case-sensitive\:
 Navigator.labelFlavor.text=Flavor\:
-Navigator.labelTimeout.text=Time-out (minutes)\:
-Navigator.labelListen.text=Listen\:
 Navigator.labelHost.text=Host\:
+Navigator.labelIgnores.text=Ignore patterns\:
 Navigator.labelKey.text=Key\:
 Navigator.labelLibrariesGettingStarted.text=Click the New button to define parameters for a library
 Navigator.labelLibrariesHelp.toolTipText=Libraries Help
+Navigator.labelListen.text=Listen\:
 Navigator.labelSources.text=Sources
+Navigator.labelTempDated.text=Temporary files dated\:
+Navigator.labelTempLocation.text=Temporary files location\:
+Navigator.labelTerminalAllosed.text=Terminal allowed\:
+Navigator.labelTimeout.text=Time-out (minutes)\:
 Navigator.libraries=\ libraries
-Libraries.listIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions
 Navigator.locationsTab.tab.mnemonic=L
 Navigator.locationsTab.tab.title=Locations
 Navigator.menu.About.mnemonic=A
@@ -347,7 +398,7 @@ Navigator.menu.Delete.are.you.sure1=Are you sure you want to delete {0}{1, choic
 Navigator.menu.Delete.are.you.sure2=\ and the content of {0, choice, 0#all directories|1#the directory}
 Navigator.menu.Delete.cannot=Cannot delete: 
 Navigator.menu.Delete.mnemonic=D
-Navigator.menu.Delete.text=Delete
+Navigator.menu.Delete.text=Delete ...
 Navigator.menu.Documentation.mnemonic=D
 Navigator.menu.Documentation.text=Documentation
 Navigator.menu.Duplicates.mnemonic=D
@@ -494,7 +545,9 @@ Navigator.menuItemWhitelist.text=Whitelist ...
 Navigator.menuItemWordWrap.mnemonic=W
 Navigator.menuItemWordWrap.text=Word Wrap Log
 Navigator.menuSystem.mnemonic=S
+Navigator.open.error.directory.not.writable=Directory not writable: 
 Navigator.open.error.file.not.found=File not found: 
+Navigator.open.error.file.not.writable=File not writable: 
 Navigator.open.error.select.a.file.only=Select a file only
 Navigator.panel.CollectionOne.tab.mnemonic=1
 Navigator.panel.CollectionOne.tab.title=Publisher 1
@@ -545,8 +598,6 @@ Navigator.splitPane.Browser.tab.title=Browser
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
-Libraries.textFieldTempLocation.toolTipText=Directory for temporary file
-Libraries.textFieldTimeout.toolTipText=Time-out period. Useful when waiting\nfor a remote system to scan collection
 Navigator.workstation=Workstation
 OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want to delete {0} entries?
 OperationsUI.buttonCopyOperation.mnemonic=C
@@ -853,8 +904,8 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
-Z.are.you.sure=Are you sure?
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
+Z.are.you.sure=Are you sure?
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes.toolTipText=Discard all changes
 Z.cancel.changes=Cancel Changes
@@ -913,29 +964,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Libraries.labelLibraries.text=Libraries
-Libraries.libraries.changes.cancelled=Libraries changes cancelled
-Libraries.libraries.changes.saved=Libraries changes saved and reloaded
-Libraries.library=Library
-Libraries.hint.server=Hint Server
-Libraries.targets=Targets
-Libraries.mode.select.type=Select type:
-Libraries.generate.new.uuid.for=Generate new UUID for: 
-Libraries.this.will.overwrite.any.existing.uuid=<html><body><b><i>Warning:</i></b> Overwrites the existing UUID.</body></html>
-Libraries.save.toolTip.text=Save all changes & reload
-Libraries.cancel.toolTip.text=Cancel all changes & reload
-Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
-Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
-Libraries.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
-Libraries.comboBoxFlavor.toolTipText=Which operating system is being\non the system with this collection
-Libraries.temp.location=Temporary Files Directory
-Libraries.labelBiblioLibraries.text=Libraries
-Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
-Libraries.textFieldHost.toolTipText=For remote Navigators and Publishers. The\n"outside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  fuzzywuzzybear.com\:50271
-Libraries.textFieldKey.toolTipText=A version 4 UUID. Use the Generate button.
-Libraries.textFieldListen.toolTipText=For remote Navigators and Publishers. The\n"inside" hostname or IP address & port to\nconnect to this  library.\n\nExample\:  plex.fuzzywuzzybear.com\:50271
-Libraries.undo=Undo
-Libraries.add.ignore.1=Enter a regular expression pattern.
-Libraries.add.ignore.2=Note: Embedded regex characters must
-Libraries.add.ignore.3=be escaped with a backslash \\.
-Libraries.add.ignore.4=See Libraries Help for details.
