Libraries tab #64 edge case changes

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -108,10 +108,10 @@ JobsUI.add.N.origins=Add {0} {1} origins?
 JobsUI.any.publisher=Any publisher
 JobsUI.any.subscriber=Any subscriber
 JobsUI.buttonAddOrigin.mnemonic=D
-JobsUI.buttonAddOrigin.text=Add
+JobsUI.buttonAddOrigin.text=Add ...
 JobsUI.buttonAddOrigin.toolTipText=Add selected Browser origin(s)
 JobsUI.buttonAddTask.mnemonic=A
-JobsUI.buttonAddTask.text=Add
+JobsUI.buttonAddTask.text=Add ...
 JobsUI.buttonAddTask.toolTipText=Add a task
 JobsUI.buttonCopy.mnemonic=C
 JobsUI.buttonDelete.mnemonic=D
@@ -193,7 +193,6 @@ Libraries.add.ignore.4=See Libraries Help for details.
 Libraries.add.multi.library.name=Add {0}{1}<library name>
 Libraries.add.new.source.to.libraries=Add new Source to libraries:
 Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
-Libraries.buttonLibrariesRefesh.text=Refesh
 Libraries.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
 Libraries.cancel.toolTip.text=Cancel all changes & reload
 Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
@@ -203,8 +202,9 @@ Libraries.comboBoxFlavor.toolTipText=Which operating system is being\non the sys
 Libraries.generate.new.uuid.for=Generate new UUID for: 
 Libraries.hint.server=Hint Server
 Libraries.labelBiblioLibraries.text=Libraries
-Libraries.libraries.changes.cancelled=Libraries changes cancelled
-Libraries.libraries.changes.saved=Libraries changes saved and reloaded
+Libraries.libraries.changes.cancelled=Changes cancelled
+Libraries.libraries.changes.none=No changes to be saved
+Libraries.libraries.changes.saved=Changes saved
 Libraries.library=Library
 Libraries.listIgnorePatterns.toolTipText=File patterns to ignore\nusing regular expressions.\n\nSee Libraries Help for details.
 Libraries.location=Location
@@ -312,13 +312,13 @@ Navigator.button.Hints.disabled.tooltip=Hints disabled
 Navigator.button.Hints.enabled.tooltip=Hints enabled
 Navigator.button.HintsKeys.text=\ Hints
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
-Navigator.buttonAddLibrary.mnemonic=D
+Navigator.buttonAddLibrary.mnemonic_2=A
 Navigator.buttonAddLibrary.text=Add
 Navigator.buttonAddLibrary.toolTipText=Add a library
-Navigator.buttonAddLocation.mnemonic=D
+Navigator.buttonAddLocation.mnemonic_2=A
 Navigator.buttonAddLocation.text=Add ...
 Navigator.buttonAddLocation.toolTipText=Add a location
-Navigator.buttonAddMultiSource.mnemonic=D
+Navigator.buttonAddMultiSource.mnemonic=P
 Navigator.buttonAddMultiSource.text=Multiple ...
 Navigator.buttonAddMultiSource.toolTipText=Add a source base path to multiple libraries
 Navigator.buttonAddSource.mnemonic=D
@@ -964,3 +964,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Libraries.nothing.to.undo=Nothing to undo
