Progress on #82 System file editors

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -72,6 +72,15 @@ EmptyDirectoryFinder.removing=Removing
 EmptyDirectoryFinder.run.tool.on.collection=Run tool on the {0} Collection?
 EmptyDirectoryFinder.running=Running Empty Directory Finder
 EmptyDirectoryFinder.this.title=Empty Directory Finder
+FileEditor.buttonAdd.mnemonic=A
+FileEditor.buttonAdd.text=Add ...
+FileEditor.buttonAdd.toolTipText=Add a row
+FileEditor.buttonRemove.mnemonic=M
+FileEditor.buttonRemove.text=Remove ...
+FileEditor.buttonRemove.toolTipText=Delete one or more rows
+FileEditor.buttonUuidList.text=UUID List ...
+FileEditor.buttonUuidList.toolTipText=Pick UUID for selected row
+FileEditor.labelSystemHelp.toolTipText=System Help
 Generator.clipboard.copy.mnemonic=C
 Generator.clipboard.copy.tooltip=Copy to clipboard
 Generator.clipboard.copy=Copy
