#82 System file editors continued

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -80,7 +80,10 @@ FileEditor.buttonRemove.text=Remove ...
 FileEditor.buttonRemove.toolTipText=Delete one or more rows
 FileEditor.buttonUuidList.text=UUID List ...
 FileEditor.buttonUuidList.toolTipText=Pick UUID for selected row
-FileEditor.labelSystemHelp.toolTipText=System Help
+FileEditor.labelHelpAuthorization.toolTipText=Authorization Keys Help
+FileEditor.labelHelpHint.toolTipText=Hint Keys Help
+FileEditor.labelHelpBlacklist.toolTipText=Blacklist Help
+FileEditor.labelHelpWhitelist.toolTipText=Whitelist Help
 Generator.clipboard.copy.mnemonic=C
 Generator.clipboard.copy.tooltip=Copy to clipboard
 Generator.clipboard.copy=Copy
@@ -220,6 +223,7 @@ Libraries.location=Location
 Libraries.minimum.free.space.for.location=Minimum free space for Location:
 Libraries.minimum.free.space=Minimum Free Space
 Libraries.mode.select.type=Select type:
+Libraries.nothing.to.undo=Nothing to undo
 Libraries.please.select.a.single.source.to.move=Please select a single Source to move
 Libraries.remove.library.from=Remove library {0} from {1}?
 Libraries.remove.locations.from=Remove {0} locations from {1}?
@@ -335,10 +339,10 @@ Navigator.buttonAddSource.text=Add ...
 Navigator.buttonAddSource.toolTipText=Add a source to library
 Navigator.buttonCopy.mnemonic=C
 Navigator.buttonCopy.text=Copy
-Navigator.buttonCopy.toolTipText=Copy an existing tool configuration
+Navigator.buttonCopy.toolTipText=Copy an existing collection
 Navigator.buttonDelete.mnemonic=D
 Navigator.buttonDelete.text=Delete ...
-Navigator.buttonDelete.toolTipText=Delete tool configuration
+Navigator.buttonDelete.toolTipText=Delete a collection
 Navigator.buttonDownSource.toolTipText=Move source down
 Navigator.buttonHintTracking.mnemonic=N
 Navigator.buttonLibrariesAddIgnore.mnemonic=A
@@ -350,10 +354,10 @@ Navigator.buttonLibrariesRemoveIgnore.toolTipText=Delete one or more ignore patt
 Navigator.buttonLibraryGenerateKey.toolTipText=Generate UUID
 Navigator.buttonNew.mnemonic=N
 Navigator.buttonNew.text=New
-Navigator.buttonNew.toolTipText=Add new tool configuration
+Navigator.buttonNew.toolTipText=Add a new collection
 Navigator.buttonRemoveLibrary.mnemonic=M
 Navigator.buttonRemoveLibrary.text=Remove ...
-Navigator.buttonRemoveLibrary.toolTipText=Delete one or more libraries
+Navigator.buttonRemoveLibrary.toolTipText=Delete library
 Navigator.buttonRemoveLocation.mnemonic=M
 Navigator.buttonRemoveLocation.text=Remove ...
 Navigator.buttonRemoveLocation.toolTipText=Delete one or more locations
@@ -379,7 +383,6 @@ Navigator.labelHost.text=Host\:
 Navigator.labelIgnores.text=Ignore patterns\:
 Navigator.labelKey.text=Key\:
 Navigator.labelLibrariesGettingStarted.text=Click the New button to define parameters for a library
-Navigator.labelLibrariesHelp.toolTipText=Libraries Help
 Navigator.labelListen.text=Listen\:
 Navigator.labelSources.text=Sources
 Navigator.labelTempDated.text=Temporary files dated\:
@@ -608,6 +611,7 @@ Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
 Navigator.workstation=Workstation
+Operations.displayName=Operations
 OperationsUI.are.you.sure.you.want.delete.entries=Are you sure you want to delete {0} entries?
 OperationsUI.buttonCopyOperation.mnemonic=C
 OperationsUI.buttonDeleteOperation.mnemonic=D
@@ -680,7 +684,6 @@ OperationsUI.comboBoxOperationWhatsNew.0.whatsNew=What's New\:
 OperationsUI.comboBoxOperationWhatsNew.1.whatsNewAll=What's New, all\:
 OperationsUI.comboBoxOperationWhatsNew.prototypeDisplayValue=What's New, all
 OperationsUI.config.cancelled=Operation {0} cancelled
-OperationsUI.displayName=Operations
 OperationsUI.els.auth.keys.file=ELS Authorization file (*.keys)
 OperationsUI.els.blacklist.file=ELS Blacklist file (*.txt)
 OperationsUI.els.export.items.file=ELS Export Items file (*.json)
@@ -756,7 +759,6 @@ OperationsUI.select.excluded.libraries=Select excluded libraries:
 OperationsUI.select.included.excluded.libraries=Select included/excluded libraries:
 OperationsUI.stop.running.operation=Stop running operation?
 OperationsUI.subscriber.libraries=Subscriber libraries
-OperationsUI.title=Operations
 OperationsUI.uncheck.to.exclude.selections=Uncheck to exclude selections
 Progress.buttonCancel.text_2=Cancel
 Progress.not.active=No processes active
@@ -973,4 +975,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-Libraries.nothing.to.undo=Nothing to undo
+FileEditor.remove.entries=Remove {0} entries?
