--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -79,7 +79,7 @@ FileEditor.buttonRemove.mnemonic=M
 FileEditor.buttonRemove.text=Remove ...
 FileEditor.buttonRemove.toolTipText=Delete one or more rows
 FileEditor.buttonUuidList.text=UUID List ...
-FileEditor.buttonUuidList.toolTipText=Pick UUID for selected row
+FileEditor.buttonUuidList.toolTipText=Pick Collection Key for selected row
 FileEditor.labelHelpAuthorization.toolTipText=Authorization Keys Help
 FileEditor.labelHelpHint.toolTipText=Hint Keys Help
 FileEditor.labelHelpBlacklist.toolTipText=Blacklist Help
