--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -976,3 +976,4 @@ Z.would.rename=Would rename:
 Z.yes=Yes
 jobs.displayName=Job
 FileEditor.remove.entries=Remove {0} entries?
+Navigator.newFolder,free=\ free
