#52 disk space check before manual copy/move, code complete

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -206,7 +206,7 @@ Libraries.add.multi.library.name=Add {0}{1}<library name>
 Libraries.add.new.source.to.libraries=Add new Source to libraries:
 Libraries.are.you.sure.remove.ignores=Are you sure you want to delete {0} ignore patterns?
 Libraries.buttonLibrarySelectTempLocation.toolTipText=Select Temporary Files Location
-Libraries.cancel.toolTip.text=Cancel all changes & reload
+Libraries.cancel.toolTip.text=Cancel all changes
 Libraries.checkBoxCase.toolTipText=If filenames should be handled as case-sensitive
 Libraries.checkBoxTempDated.toolTipText=Add dates to temporary files
 Libraries.checkBoxTerminalAllowed.toolTipText=If an ELS terminal is allowed\nto connect to this collection
@@ -228,7 +228,7 @@ Libraries.please.select.a.single.source.to.move=Please select a single Source to
 Libraries.remove.library.from=Remove library {0} from {1}?
 Libraries.remove.locations.from=Remove {0} locations from {1}?
 Libraries.remove.sources.from.library=Remove {0} sources from {1} library {2}?
-Libraries.save.toolTip.text=Save all changes & reload
+Libraries.save.toolTip.text=Save all changes
 Libraries.select.base.path.of.new.location=Select base path of new Location:
 Libraries.select.location=Select location
 Libraries.select.new.location=Select new Location
@@ -977,3 +977,4 @@ Z.yes=Yes
 jobs.displayName=Job
 FileEditor.remove.entries=Remove {0} entries?
 Navigator.newFolder,free=\ free
+NavTransferHandler.the.files.will.not.fit.on=The {0} files ({1}) will not fit on {2}
