#109 Changed authorization keys to authentication keys terminology; i18n changes

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -72,6 +72,8 @@ EmptyDirectoryFinder.removing=Removing
 EmptyDirectoryFinder.run.tool.on.collection=Run tool on the {0} Collection?
 EmptyDirectoryFinder.running=Running Empty Directory Finder
 EmptyDirectoryFinder.this.title=Empty Directory Finder
+FileEditor.authentication.keys=Authentication Keys
+FileEditor.blacklist=Blacklist
 FileEditor.buttonAdd.mnemonic=A
 FileEditor.buttonAdd.text=Add ...
 FileEditor.buttonAdd.toolTipText=Add a row
@@ -80,10 +82,27 @@ FileEditor.buttonRemove.text=Remove ...
 FileEditor.buttonRemove.toolTipText=Delete one or more rows
 FileEditor.buttonUuidList.text=UUID List ...
 FileEditor.buttonUuidList.toolTipText=Pick Collection Key for selected row
-FileEditor.labelHelpAuthorization.toolTipText=Authorization Keys Help
-FileEditor.labelHelpHint.toolTipText=Hint Keys Help
+FileEditor.collection.keys.allowed.to.connect=Collection keys allowed to connect.
+FileEditor.collection.keys.involved.in.processing.hints=Collection keys involved in processing Hints.
+FileEditor.collection.uuid.key=Collection UUID Key
+FileEditor.description=Description
+FileEditor.hint.keys=Hint Keys
+FileEditor.ip.address=IP Address
+FileEditor.ip.addresses.allowed.to.connect=IP addresses allowed to connect.
+FileEditor.ip.addresses.that.may.not.connect=IP addresses that may not connect.
+FileEditor.labelHelpAuthentication.toolTipText=Authentication Keys Help
 FileEditor.labelHelpBlacklist.toolTipText=Blacklist Help
+FileEditor.labelHelpHint.toolTipText=Hint Keys Help
 FileEditor.labelHelpWhitelist.toolTipText=Whitelist Help
+FileEditor.name=Name
+FileEditor.overwrite.existing.uuid=Overwrite existing UUID?
+FileEditor.please.select.a.single.row.to.update=Please select a single row to update
+FileEditor.read.ip.addresses.0.successfully=Read IP addresses {0} successfully
+FileEditor.remove.entries=Remove {0} entries?
+FileEditor.select.collection.uuid=Select Collection UUID
+FileEditor.that.collection.uuid.key.is.already.defined=That Collection UUID Key is already defined
+FileEditor.there.are.no.collections.to.choose.from=There are no Collections to choose from
+FileEditor.whitelist=Whitelist
 Generator.clipboard.copy.mnemonic=C
 Generator.clipboard.copy.tooltip=Copy to clipboard
 Generator.clipboard.copy=Copy
@@ -557,6 +576,7 @@ Navigator.menuItemWhitelist.text=Whitelist ...
 Navigator.menuItemWordWrap.mnemonic=W
 Navigator.menuItemWordWrap.text=Word Wrap Log
 Navigator.menuSystem.mnemonic=S
+Navigator.newFolder.free=\ free
 Navigator.open.error.directory.not.writable=Directory not writable: 
 Navigator.open.error.file.not.found=File not found: 
 Navigator.open.error.file.not.writable=File not writable: 
@@ -684,7 +704,7 @@ OperationsUI.comboBoxOperationWhatsNew.0.whatsNew=What's New\:
 OperationsUI.comboBoxOperationWhatsNew.1.whatsNewAll=What's New, all\:
 OperationsUI.comboBoxOperationWhatsNew.prototypeDisplayValue=What's New, all
 OperationsUI.config.cancelled=Operation {0} cancelled
-OperationsUI.els.auth.keys.file=ELS Authorization file (*.keys)
+OperationsUI.els.auth.keys.file=ELS Authentication file (*.keys)
 OperationsUI.els.blacklist.file=ELS Blacklist file (*.txt)
 OperationsUI.els.export.items.file=ELS Export Items file (*.json)
 OperationsUI.els.export.text.file=ELS Export Text file (*.txt)
@@ -975,6 +995,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-FileEditor.remove.entries=Remove {0} entries?
-Navigator.newFolder,free=\ free
-NavTransferHandler.the.files.will.not.fit.on=The {0} files ({1}) will not fit on {2}
