Progress on #116; Added option for start-up files; Added beginnings of Help, Getting Started

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -1034,3 +1034,4 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Navigator.getting.started=Getting Started
