Fixed Updater bug caused by move from GrokSoft to Corionis

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -386,7 +386,7 @@ Navigator.buttonRemoveSource.toolTipText=Delete one or more sources
 Navigator.buttonUpSource.toolTipText=Move source up
 Navigator.cancelButton.mnemonic_2=U
 Navigator.cannot.find.updater=Cannot find executable:\ 
-Navigator.changes.help.title=Changes In This Version
+Navigator.changes.help.title=Current Build Changelist
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
