Continuation of #116; see Changelist

--- a/src/com/corionis/els/locales/bundle.properties
+++ b/src/com/corionis/els/locales/bundle.properties
@@ -374,7 +374,6 @@ Navigator.buttonLibraryGenerateKey.toolTipText=Generate UUID
 Navigator.buttonNew.mnemonic=N
 Navigator.buttonNew.text=New
 Navigator.buttonNew.toolTipText=Add a new collection
-Navigator.buttonRemoveLibrary.mnemonic=M
 Navigator.buttonRemoveLibrary.text=Remove ...
 Navigator.buttonRemoveLibrary.toolTipText=Delete library
 Navigator.buttonRemoveLocation.mnemonic=M
@@ -549,6 +548,17 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemCloseHintTracking.displayedMnemonicIndex=5
+Navigator.menuItemCloseHintTracking.mnemonic=T
+Navigator.menuItemCloseHintTracking.text=Hint Tracking ...
+Navigator.menuItemCloseHintKeys.mnemonic=K
+Navigator.menuItemCloseHintKeys.text=Hint Keys ...
+Navigator.menuItemCloseSubscriber.mnemonic=S
+Navigator.menuItemCloseSubscriber.text=Subscriber ...
+Navigator.menuItemClose.mnemonic=C
+Navigator.menuItemClose.text=Close
+Navigator.menuItemClosePublisher.mnemonic=P
+Navigator.menuItemClosePublisher.text=Publisher ...
 Navigator.menuItemAuthKeys.mnemonic=A
 Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemAutoRefresh.mnemonic=A
@@ -974,6 +984,8 @@ Updater.title=ELS Updater
 Updater.unpacking=unpacking: 
 Updater.update.info.not.found.0.using.coded.url.1=update.info not found: {0}, using coded URL: {1}
 Updater.update.url=update URL: 
+Z.are.you.sure.you.want.to.close=Are you sure you want to close\ 
+Z.are.you.sure.you.want.to.quit.and.close=Are you sure you want to quit the Hint Status Server and close\ 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.are.you.sure=Are you sure?
 Z.cancel.all.changes=Cancel all changes?
@@ -1003,6 +1015,8 @@ Z.error.writing=Error writing\:
 Z.error=Error 
 Z.exception=Exception\: 
 Z.fault=Fault\: 
+Z.hint.key=Hint Keys
+Z.hint.tracker=Hint Tracker
 Z.invalid.selection=Invalid selection\: 
 Z.local.lowercase=local
 Z.local.uppercase=Local 
